# moinfo

./: .gitignore  README.md  chronos_capabilities.csv  doc_scan_to_pdf.py  moinfo.ipynb  moirai_agent_categorized.csv  moirai_agent_function_list.csv  moirai_data_pipeline_detailed.csv  moirai_user_ready_list.csv  split_pdf_pages.py  timesfm_api_verification_table.csv  timesfm_meta_execution_table.csv
_artifacts/runs/smoke-90c06148/config/: effective_config.json
_artifacts/timesfm_save_pretrained_matrix_tests/config_override_test/: README.md  config.json
_artifacts/timesfm_save_pretrained_tests/shard_200MB/: config.json
chronos_bolt_local/: config.json
chronos_hf_local/: config.json
common/moinfo_core/: __init__.py  config.py  logging.py  paths.py
common/moinfo_data/: __init__.py  io.py  preprocess.py  schema.py
common/moinfo_introspect/: __init__.py  public_api.py
data/: train.csv
libs/chronos/: README.md
libs/chronos/03_scripts/: run_meta_experiments.py
libs/chronos/07_configs/: default_config.yaml
libs/chronos/09_docs/: ChatGPT-実装方針とディレクトリ構成.md
libs/timesfm/02_src/moinfo_timesfm_ext/: pyproject.toml
libs/timesfm/02_src/moinfo_timesfm_ext/moinfo_timesfm_ext/: __init__.py  client.py  config.py  datasets.py  finetune.py  hf_model.py  introspect_timesfm.py  utils.py
libs/timesfm/02_src/moinfo_timesfm_ext/moinfo_timesfm_ext.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/timesfm/03_scripts/: introspect_timesfm_features.py
libs/timesfm/09_docs/: ChatGPT-TimesFM機能一覧.md  Gemini-TimesFM 機能とAPI一覧.md
tools/: scaffold.ps1
(+4 files in other folders)
